--- a/config/database.yml
+++ b/config/database.yml
@@ -91,6 +91,4 @@ test:
 #
 production:
   <<: *default
-  database: budget_app_on_rails_production
-  username: budget_app_on_rails
-  password: <%= ENV["BUDGET_APP_ON_RAILS_DATABASE_PASSWORD"] %>
+  url: <%= ENV['DATABASE_URL'] %>
