--- a/render.yaml
+++ b/render.yaml
@@ -1,18 +1,18 @@
 databases:
-  - name: mysite
-    databaseName: mysite
-    user: mysite
+  - name: recipe
+    databaseName: recipe_7wq7
+    user: recipe_7wq7_user
 
 services:
   - type: web
-    name: mysite
+    name: Bolo
     runtime: ruby
     buildCommand: "./bin/render-build.sh"
     startCommand: "bundle exec puma -C config/puma.rb"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: mysite
+          name: recipe_7wq7
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
