--- a/render.yaml
+++ b/render.yaml
@@ -1,18 +1,18 @@
 databases:
-  - name: test-db
-    databaseName: test_db_1clj
-    user: test_db_1clj_user
+  - name: mysite
+    databaseName: mysite
+    user: mysite
 
 services:
   - type: web
-    name: budget-deploy
+    name: mysite
     runtime: ruby
     buildCommand: "./bin/render-build.sh"
     startCommand: "bundle exec puma -C config/puma.rb"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: test_db_1clj
+          name: mysite
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
