--- a/render.yaml
+++ b/render.yaml
@@ -1,18 +1,18 @@
 databases:
-  - name: mysite
-    databaseName: mysite
-    user: mysite
+  - name: mysql-test
+    databaseName: mysql_test_ifi4
+    user: mysql_test_ifi4_user
 
 services:
   - type: web
-    name: mysite
+    name: final-bolo
     runtime: ruby
     buildCommand: "./bin/render-build.sh"
     startCommand: "bundle exec puma -C config/puma.rb"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: mysite
+          name: mysql_test_ifi4
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
